Source/WebKit2/Shared/mac/RemoteLayerTreeTransaction.h
@@ -95,6 +95,7 @@ public:
         WebCore::PlatformCALayer::LayerType type;
 
         uint32_t hostingContextID;
+        float hostingDeviceScaleFactor;
     };
 
     struct LayerProperties {
